# cbclib_v2

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  environment.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
cbclib_v2/: __init__.py  annotations.py  cbc_setup.py  cbc_table.py  cxi_protocol.py  data_container.py  data_processing.py  device.py  fft.py  kdtree.py  label.py  ndimage.py  new_label.py  scripts.py  streak_finder.py  test_util.py  xfel_data.py  xfel_geom.py
cbclib_v2/_src/: annotations.py  array_api.py  backends.py  cbc_table.py  config.py  crystfel.py  cxi_protocol.py  data_container.py  data_processing.py  device.py  functions.py  label.py  new_label.py  parser.py  run.py  scripts.py  state.py  streak_finder.py  streaks.py  test_util.py
cbclib_v2/_src/config/: cryst_data.ini  cryst_metadata.ini
cbclib_v2/_src/src/: __init__.py  array.hpp  array_view.hpp  bresenham.cpp  bresenham.hpp  bresenham.pyi  cuda_draw_lines.cu  cuda_draw_lines.pyi  cuda_functions.cu  cuda_geometry.hpp  cuda_label.cu  cuda_label.pyi  cuda_median.cu  cuda_median.pyi  cuda_streak_finder.cu  cuda_streak_finder.pyi  cupy_array.hpp  fft_functions.cpp  fft_functions.hpp  fft_functions.pyi  geometry.hpp  image_proc.cpp  image_proc.hpp  include.hpp  index.cpp  index.pyi  kd_tree.cpp  kd_tree.hpp  kd_tree.pyi  label.cpp  label.hpp  label.pyi  log.hpp  median.cpp  median.hpp  median.pyi  new_label.cpp  new_label.hpp  new_label.pyi  numpy.hpp  (+9 more)
cbclib_v2/indexer/: __init__.py  cbc_data.py  cbc_indexing.py  cbc_setup.py  geometry.py
cbclib_v2/jax/: __init__.py  cbc_data.py  cbc_indexing.py  cbc_setup.py  dataclasses.py  geometry.py  primitives.py  primitives.pyi  state.py
cbclib_v2/slurm/: __init__.py  scripts.py  slurm_manager.py
cbclib_v2/src/: __init__.py  array.hpp  cpu_ops.cc  cpu_ops.pyi  geometry.cpp  geometry.hpp  geometry.pyi  image_proc.cpp  image_proc.hpp  image_proc.pyi  include.hpp  kd_tree.cpp  kd_tree.hpp  kd_tree.pyi  label.cpp  label.hpp  median.cpp  median.hpp  median.pyi  nd_tree.cpp  nd_tree.hpp  nd_tree.pyi  signal_proc.hpp  signal_proc.pyi  streak_finder.cpp  streak_finder.hpp  streak_finder.pyi
docs/: conf.py  environment.yml  index.rst
tests/: array_view_test.py  cbd_indexing_test.py  cbd_model_test.py  cbd_setup_test.py  conftest.py  crystfel_test.py  data_containers_test.py  draw_line_test.py  fft_functions_test.py  image_proc_test.py  jax_primitives_test.py  label_test.py  peaks_and_moments_test.py  slurm_manager_test.py  streak_finder_test.py
