[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "numpy>=1.19"
]
build-backend = "setuptools.build_meta"

[project]
name = 'cbclib_v2'
authors = [{name = 'Nikolay Ivanov', email = 'nikolay.ivanov@desy.de'}]
description = 'Convergent beam crystallography data processing library'
version = '0.10.1'
dependencies = [
    'extra_data',
    'extra_geom',
    'h5py',
    'jax',
    'numpy',
    'pandas',
    'pybind11'
]
license = {file = 'LICENSE'}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ['pytest', 'scipy']

[project.urls]
Repository = "https://github.com/simply-nicky/cbclib_v2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = ["slow: mark a test that takes a long time to run."]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
