[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "numpy>=2.1.0"
]
build-backend = "setuptools.build_meta"

[project]
name = 'cbclib_v2'
authors = [{name = 'Nikolay Ivanov', email = 'nikolay.ivanov@desy.de'}]
description = 'Convergent beam crystallography data processing library'
version = '0.10.7'
dependencies = [
    'extra_data',
    'extra_geom',
    'h5py',
    'jax',
    'numpy>=2.1.0',
    'pandas',
    'pybind11>=2.10.0',
    'tqdm'
]
license = "GPL-3.0-or-later"
license-files = ['LICENSE',]
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ['jupyter', 'matplotlib', 'pytest', 'scipy']

[project.urls]
Repository = "https://github.com/simply-nicky/cbclib_v2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = ["slow: mark a test that takes a long time to run."]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
