[build-system]
requires = [
    "setuptools>=77.0.3",
    "pybind11>=2.10.0",
    "numpy>=2.1.0",
    "pkgconfig>=1.5.5"
]
build-backend = "setuptools.build_meta"

[project]
name = 'cbclib_v2'
authors = [{name = 'Nikolay Ivanov', email = 'nikolay.ivanov@desy.de'}]
description = 'Convergent beam crystallography data processing library'
version = '0.13.0'
dependencies = [
    'array_api_compat',
    'h5py',
    'hdf5plugin',
    'jax',
    'numpy>=2.1.0',
    'pandas',
    'pybind11>=2.10.0',
    'tqdm'
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
cuda = ["cupy>=13.0.0"]
dev = ['jupyter', 'matplotlib', 'pytest', 'pytest-asyncio', 'scipy']

[project.scripts]
cbclib_cli = 'cbclib_v2.slurm:main'

[project.urls]
Repository = "https://github.com/simply-nicky/cbclib_v2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = ["slow: mark a test that takes a long time to run.",
           "asyncio: mark a test as requiring asyncio."]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]

[tool.pylint.design]
extension-pkg-allow-list = [
    "cbclib_v2._src.src.bresenham",
    "cbclib_v2._src.src.cuda_draw_lines",
    "cbclib_v2._src.src.cuda_label",
    "cbclib_v2._src.src.fft_functions",
    "cbclib_v2._src.src.index",
    "cbclib_v2._src.src.label",
    "cbclib_v2._src.src.median",
    "cbclib_v2._src.src.signal_proc",
    "cbclib_v2._src.src.streak_finder"
]
